src/styles/scrolling.css
.announcement {
    background: #004526;
    color: #fff;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 0;
    font-size: 45px;
    font-weight: bold;
    font-family: "Dangrek", sans-serif;
}
.marquee {
    background: #004526;
}

.announcement-text {
    display: flex;
    align-items: center;
    margin-right: 2em;

}

.text1 span{
    margin-right: 0.5em;
}

.text2 span:not(:last-child) {
    margin-right: 2rem;
}

.text2 span:last-child{
    margin-right: 1em;
}

.text3 span:not(:last-child) {
    margin-right: 2rem;
}

.text3 span:last-child{
    margin-right: 1em;
}




.oval {
    height: 40px;
    width: 30px;
    background-color: #FFFFF0;
    border-radius: 50%;
  }

